@@ -143,6 +143,8 @@
 /* Toggle visibility (ex: mail account in left navigation menu) */
 "Toggle visibility" = "Toggle visibility";
 
+"Keyboard Shortcuts" = "Keyboard Shortcuts";
+
 /* Toggle multiple items at the same time (hotkeys cheatsheet) */
 "Toggle range of items" = "Toggle range of items";
 
@@ -151,6 +153,9 @@
 
 /* Space key */
 "key_space" = "space";
+
+/* Delete key */
+"key_delete" = "delete";
 
 /* Shift and space key */
 "key_shift+space" = "shift + space";
@@ -174,7 +179,7 @@
 "key_shift+down" = "shift + ↓";
 
 /* Backspace key */
-"key_backspace" = "backspace";
+"key_backspace" = "⌫";
 
 /* Hotkey to start a search */
 "hotkey_search" = "s";
