@@ -421,13 +421,18 @@
               escapeToClose: true,
               template: [
                 '<md-dialog>',
+                '  <md-toolbar class="md-hue-2">',
+                '    <div class="md-toolbar-tools">',
+                '      <div ng-bind="::\'Keyboard Shortcuts\' | loc"></div>',
+                '    </div>',
+                '  </md-toolbar>',
                 '  <md-dialog-content>',
                 '    <md-list>',
                 '      <md-list-item ng-repeat="(hotkey, keys) in hotkeys">',
-                '        <div class="sg-hotkey-container">',
+                '        {{keys[0].description}}',
+                '        <div class="md-secondary sg-hotkey-container">',
                 '          <sg-hotkey>{{keys[0].lkey || hotkey}}</sg-hotkey>',
                 '        </div>',
-                '        {{keys[0].description}}',
                 '      </md-list-item>',
                 '    </md-list>',
                 '  </md-dialog-content>',
