@@ -2,7 +2,6 @@
 
 .sg-hotkey-container {
   display: inline;
-  margin-right: 1em;
   text-align: right;
   min-width: 7em;
 }
@@ -14,7 +13,6 @@ sg-hotkey {
   box-shadow: inset 0 1px 0 #666, 0 1px 0 #bbb;
   color: #fff;
   display: inline-block;
-  margin-right: 5px;
   padding: 5px 9px;
   text-align: center;
 }
